# lo2cin4bt-2.0-beta

./: .env.example  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pylintrc  AGENTS.md  BETA_TESTING.md  CONTRIBUTING.md  README.en.md  README.md  SECURITY.md  Troubleshooting.md  main.py  pyproject.toml  pytest.ini  requirements-brokers.txt  requirements-dev.txt  requirements.txt  setup.cfg
.semgrep/: lo2cin4bt.yml
Lecture/: index.html
agents/: lo2cin4bt_AcceptanceSubAgent.agent.md  lo2cin4bt_BacktestSubAgent.agent.md  lo2cin4bt_PM.agent.md  lo2cin4bt_PerformanceAnalysisSubAgent.agent.md  lo2cin4bt_StrategyBuilderSubAgent.agent.md  lo2cin4bt_Teacher.agent.md
app/: __init__.py
autorunner/: BacktestRunner_autorunner.py  Base_autorunner.py  ConfigLoader_autorunner.py  ConfigSelector_autorunner.py  ConfigValidator_autorunner.py  DataLoader_autorunner.py  FeatureContractValidator_v1.py  MetricsRunner_autorunner.py  README.md  StatAnalyserRunner_autorunner.py  StrategyCompiler.py  StrategyContractValidator.py  StrategyPreview.py  __init__.py
backtester/: AuditReader_backtester.py  BacktestExecutionRuntime_backtester.py  Base_backtester.py  BollingerBand_Indicator_backtester.py  CalendarConditionMaterializer_backtester.py  DataImporter_backtester.py  FeatureContractMaterializer_backtester.py  HL_Indicator_backtester.py  IndicatorManifestRegistry_backtester.py  IndicatorParams_backtester.py  Indicators_backtester.py  MovingAverage_Indicator_backtester.py  MultiAssetPortfolioEngine_backtester.py  MultiAssetPortfolioExporter_backtester.py  (+19 more)
(+409 files in other folders)
