[project]
name = "lo2cin4bt"
version = "2.0.2"
description = "Browser-first quantitative research, backtesting, parameter-matrix, and WFA workspace."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = [
  "app",
  "autorunner",
  "backtester",
  "dataloader",
  "metricstracker",
  "statanalyser",
  "utils",
  "verification",
  "wfanalyser",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = [
  "plotter/web",
  "workspace",
  "outputs",
  "logs",
]

[tool.ruff.lint]
select = ["F401", "F841", "F811"]

[tool.bandit]
exclude_dirs = [
  "tests",
  "plotter/web",
  "workspace",
  "outputs",
  "logs",
]
